hphp/hack/test/typecheck/instanceof/instanceof_generic_bad2.php.exp
File "instanceof_generic_bad2.php", line 3, characters 9-9:
Name already bound: T (Naming[2012])
File "instanceof_generic_bad2.php", line 3, characters 7-7:
Previous definition is here
