hphp/hack/test/typecheck/instanceof/instanceof_generic_bad2.php
<?hh

class T<T> {
  public function f(mixed $a): bool {
    return $a is T;
  }
}
